--- a/printer.cfg
+++ b/printer.cfg
@@ -44,13 +44,13 @@ square_corner_velocity: 5.0
 ##  Connected to MOTOR_0
 ##  Endstop connected to DIAG_0
 [stepper_x]
-step_pin: PF13
-dir_pin: PF12
-enable_pin: !PF14
+step_pin: Octopus: PF13
+dir_pin: Octopus: PF12
+enable_pin: !Octopus: PF14
 rotation_distance: 40
 microsteps: 32
 full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
-endstop_pin: !PG6
+endstop_pin: !Octopus: PG6
 position_min: 0
 ##--------------------------------------------------------------------
 
@@ -65,7 +65,7 @@ homing_positive_dir: true
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_x]
-uart_pin: PC4
+uart_pin: Octopus: PC4
 interpolate: false
 run_current: 0.8
 sense_resistor: 0.110
@@ -75,13 +75,13 @@ stealthchop_threshold: 0
 ##  Connected to MOTOR_1
 ##  Endstop connected to DIAG_1
 [stepper_y]
-step_pin: PG0
-dir_pin: PG1
-enable_pin: !PF15
+step_pin: Octopus: PG0
+dir_pin: Octopus: PG1
+enable_pin: !Octopus: PF15
 rotation_distance: 40
 microsteps: 32
 full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
-endstop_pin: !PG9
+endstop_pin: !Octopus: PG9
 position_min: 0
 ##--------------------------------------------------------------------
 
@@ -96,7 +96,7 @@ homing_positive_dir: true
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_y]
-uart_pin: PD11
+uart_pin: Octopus: PD11
 interpolate: false
 run_current: 0.8
 sense_resistor: 0.110
@@ -110,13 +110,13 @@ stealthchop_threshold: 0
 ##  Connected to MOTOR_2
 ##  Endstop connected to DIAG_2
 [stepper_z]
-step_pin: PF11
-dir_pin: PG3
-enable_pin: !PG5
+step_pin: Octopus: PF11
+dir_pin: Octopus: PG3
+enable_pin: !Octopus: PG5
 rotation_distance: 40
 gear_ratio: 80:16
 microsteps: 32
-endstop_pin: PG10
+endstop_pin: Octopus: PG10
 ##  Z-position of nozzle (in mm) to z-endstop trigger point relative to print surface (Z0)
 ##  (+) value = endstop above Z0, (-) value = endstop below
 ##  Increasing position_endstop brings nozzle closer to the bed
@@ -134,7 +134,7 @@ homing_retract_dist: 3
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z]
-uart_pin: PC6
+uart_pin: Octopus: PC6
 interpolate: false
 run_current: 0.8
 sense_resistor: 0.110
@@ -143,16 +143,16 @@ stealthchop_threshold: 0
 ##  Z1 Stepper - Rear Left
 ##  Connected to MOTOR_3
 [stepper_z1]
-step_pin: PG4
-dir_pin: !PC1
-enable_pin: !PA0
+step_pin: Octopus: PG4
+dir_pin: !Octopus: PC1
+enable_pin: !Octopus: PA0
 rotation_distance: 40
 gear_ratio: 80:16
 microsteps: 32
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z1]
-uart_pin: PC7
+uart_pin: Octopus: PC7
 interpolate: false
 run_current: 0.8
 sense_resistor: 0.110
@@ -161,16 +161,16 @@ stealthchop_threshold: 0
 ##  Z2 Stepper - Rear Right
 ##  Connected to MOTOR_4
 [stepper_z2]
-step_pin: PF9
-dir_pin: PF10
-enable_pin: !PG2
+step_pin: Octopus: PF9
+dir_pin: Octopus: PF10
+enable_pin: !Octopus: PG2
 rotation_distance: 40
 gear_ratio: 80:16
 microsteps: 32
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z2]
-uart_pin: PF2
+uart_pin: Octopus: PF2
 interpolate: false
 run_current: 0.8
 sense_resistor: 0.110
@@ -179,16 +179,16 @@ stealthchop_threshold: 0
 ##  Z3 Stepper - Front Right
 ##  Connected to MOTOR_5
 [stepper_z3]
-step_pin: PC13
-dir_pin: !PF0
-enable_pin: !PF1
+step_pin: Octopus: PC13
+dir_pin: !Octopus: PF0
+enable_pin: !Octopus: PF1
 rotation_distance: 40
 gear_ratio: 80:16
 microsteps: 32
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z3]
-uart_pin: PE4
+uart_pin: Octopus: PE4
 interpolate: false
 run_current: 0.8
 sense_resistor: 0.110
@@ -203,9 +203,9 @@ stealthchop_threshold: 0
 ##  Heater - HE0
 ##  Thermistor - T0
 [extruder]
-step_pin: PE2
-dir_pin: PE3
-enable_pin: !PD4
+step_pin: Octopus: PE2
+dir_pin: Octopus: PE3
+enable_pin: !Octopus: PD4
 ##  Update value below when you perform extruder calibration
 ##  If you ask for 100mm of filament, but in reality it is 98mm:
 ##  rotation_distance = <previous_rotation_distance> * <actual_extrude_distance> / 100
@@ -220,11 +220,11 @@ microsteps: 32
 full_steps_per_rotation: 200    #200 for 1.8 degree, 400 for 0.9 degree
 nozzle_diameter: 0.400
 filament_diameter: 1.75
-heater_pin: PA2
+heater_pin: Octopus: PA2
 ## Check what thermistor type you have. See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types.
 ## Use "Generic 3950" for NTC 100k 3950 thermistors
 sensor_type: PT1000
-sensor_pin: PF4
+sensor_pin: Octopus: PF4
 min_temp: 10
 max_temp: 350
 max_power: 1.0
@@ -241,7 +241,7 @@ pid_kd = 131.721
 ##  E0 on MOTOR6
 ##  Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 extruder]
-uart_pin: PE1
+uart_pin: Octopus: PE1
 interpolate: false
 run_current: 0.5
 sense_resistor: 0.110
@@ -256,13 +256,13 @@ stealthchop_threshold: 0
 ##  Thermistor - TB
 [heater_bed]
 ##  Uncomment the following line if using the default SSR wiring from the docs site
-heater_pin: PA3
+heater_pin: Octopus: PA3
 ##  Other wiring guides may use BED_OUT to control the SSR. Uncomment the following line for those cases
-#heater_pin: PA1
+#heater_pin: Octopus: PA1
 ## Check what thermistor type you have. See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types.
 ## Use "Generic 3950" for Keenovo heaters
 sensor_type: Generic 3950
-sensor_pin: PF3
+sensor_pin: Octopus: PF3
 ##  Adjust Max Power so your heater doesn't warp your bed. Rule of thumb is 0.4 watts / cm^2 .
 max_power: 1
 min_temp: 0
@@ -284,11 +284,11 @@ pid_kd: 363.769
 
 ## Select the probe port by type:
 ## For the PROBE port. Will not work with Diode. May need pull-up resistor from signal to 24V.
-#pin: ~!PB7
+#pin: Octopus: ~!PB7
 ## For the DIAG_7 port. NEEDS BAT85 DIODE! Change to !PG15 if probe is NO.
-pin: PG15
+pin: Octopus: PG15
 ## For Octopus Pro PROBE port; NPN and PNP proximity switch types can be set by jumper
-#pin: ~!PC5
+#pin: Octopus: ~!PC5
 
 #--------------------------------------------------------------------
 
@@ -308,7 +308,7 @@ samples_tolerance_retries: 3
 
 ##  Print Cooling Fan - FAN0
 [fan]
-pin: PA8
+pin: Octopus: PA8
 kick_start_time: 0.5
 ##  Depending on your fan, you may need to increase this value
 ##  if your fan will not start. Can change cycle_time (increase)
@@ -318,7 +318,7 @@ off_below: 0.10
 
 ##  Hotend Fan - FAN1
 [heater_fan hotend_fan]
-pin: PE5
+pin: Octopus: PE5
 max_power: 1.0
 kick_start_time: 0.5
 heater: extruder
@@ -328,13 +328,13 @@ heater_temp: 50.0
 
 ##  Controller fan - FAN2
 [controller_fan controller_fan]
-pin: PD12
+pin: Octopus: PD12
 kick_start_time: 0.5
 heater: heater_bed
 
 ##  Exhaust fan - FAN3
 [heater_fan exhaust_fan]
-pin: PD13
+pin: Octopus: PD13
 max_power: 1.0
 shutdown_speed: 0.0
 kick_start_time: 5.0
@@ -348,7 +348,7 @@ fan_speed: 1.0
 
 ## Chamber Lighting - HE2 Connector (Optional)
 #[output_pin caselight]
-#pin: PB10
+#pin: Octopus: PB10
 #pwm:true
 #shutdown_value: 0
 #value:1
@@ -427,15 +427,15 @@ aliases:
 ##  RepRapDiscount 128x64 Full Graphic Smart Controller
 # [display]
 # lcd_type: st7920
-# cs_pin: EXP1_4
-# sclk_pin: EXP1_5
-# sid_pin: EXP1_3
+# cs_pin: Octopus: EXP1_4
+# sclk_pin: Octopus: EXP1_5
+# sid_pin: Octopus: EXP1_3
 # menu_timeout: 40
 # encoder_pins: ^EXP2_5, ^EXP2_3
-# click_pin: ^!EXP1_2
+# click_pin: !Octopus: ^EXP1_2
 
 # [output_pin beeper]
-# pin: EXP1_1
+# pin: Octopus: EXP1_1
 
 #--------------------------------------------------------------------
 
@@ -443,19 +443,19 @@ aliases:
 ##  mini12864 LCD Display
 [display]
 lcd_type: uc1701
-cs_pin: EXP1_3
-a0_pin: EXP1_4
-rst_pin: EXP1_5
-encoder_pins: ^EXP2_5, ^EXP2_3
-click_pin: ^!EXP1_2
+cs_pin: Octopus: EXP1_3
+a0_pin: Octopus: EXP1_4
+rst_pin: Octopus: EXP1_5
+encoder_pins: Octopus: ^EXP2_5, Octopus: ^EXP2_3
+click_pin: !Octopus: ^EXP1_2
 contrast: 63
-spi_software_miso_pin: EXP2_1
-spi_software_mosi_pin: EXP2_6
-spi_software_sclk_pin: EXP2_2
+spi_software_miso_pin: Octopus: EXP2_1
+spi_software_mosi_pin: Octopus: EXP2_6
+spi_software_sclk_pin: Octopus: EXP2_2
 
 ##  To control Neopixel RGB in mini12864 display
 [neopixel btt_mini12864]
-pin: EXP1_6
+pin: Octopus: EXP1_6
 chain_count: 3
 initial_RED: 0.1
 initial_GREEN: 0.5
