--- a/printer.cfg
+++ b/printer.cfg
@@ -21,7 +21,7 @@
 ## Probe pin                            [probe] section
 ## Fine tune E steps                    [extruder] section
 
-[mcu]
+[mcu Octopus]
 ##  Obtain definition by "ls -l /dev/serial/by-id/" then unplug to verify
 ##--------------------------------------------------------------------
 serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_39003A001450535556323420-if00
