Fix a couple things

--- a/printer.cfg
+++ b/printer.cfg
@@ -20,6 +20,8 @@
 ## PID tune                             [extruder] and [heater_bed] sections
 ## Probe pin                            [probe] section
 ## Fine tune E steps                    [extruder] section
+[mcu]
+serial: /dev/null
 
 [mcu Octopus]
 ##  Obtain definition by "ls -l /dev/serial/by-id/" then unplug to verify
@@ -446,8 +448,8 @@ lcd_type: uc1701
 cs_pin: Octopus: EXP1_3
 a0_pin: Octopus: EXP1_4
 rst_pin: Octopus: EXP1_5
-encoder_pins: Octopus: ^EXP2_5, Octopus: ^EXP2_3
-click_pin: !Octopus: ^EXP1_2
+encoder_pins: ^Octopus: EXP2_5, ^Octopus: EXP2_3
+click_pin: !^Octopus: EXP1_2
 contrast: 63
 spi_software_miso_pin: Octopus: EXP2_1
 spi_software_mosi_pin: Octopus: EXP2_6
