--- a/printer.cfg
+++ b/printer.cfg
@@ -23,7 +23,7 @@
 [mcu]
 serial: /dev/null
 
-[mcu Octopus]
+[mcu]
 ##  Obtain definition by "ls -l /dev/serial/by-id/" then unplug to verify
 ##--------------------------------------------------------------------
 serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_39003A001450535556323420-if00
