--- a/printer.cfg
+++ b/printer.cfg
@@ -21,6 +21,9 @@
 ## Probe pin                            [probe] section
 ## Fine tune E steps                    [extruder] section
 
+## Includes
+[include klicky-probe.cfg]
+
 [mcu]
 ##  Obtain definition by "ls -l /dev/serial/by-id/" then unplug to verify
 ##--------------------------------------------------------------------
@@ -361,14 +364,14 @@ fan_speed: 1.0
 [idle_timeout]
 timeout: 1800
 
-[safe_z_home]
-##  XY Location of the Z Endstop Switch
-##  Update -10,-10 to the XY coordinates of your endstop pin 
-##  (such as 157,305) after going through Z Endstop Pin
-##  Location Definition step.
-home_xy_position: 232.8,350
-speed:10
-z_hop:10
+# [safe_z_home]
+# ##  XY Location of the Z Endstop Switch
+# ##  Update -10,-10 to the XY coordinates of your endstop pin 
+# ##  (such as 157,305) after going through Z Endstop Pin
+# ##  Location Definition step.
+# home_xy_position: 232.8,350
+# speed:10
+# z_hop:10
 
 
 ##  Use QUAD_GANTRY_LEVEL to level a gantry.
