--- a/printer.cfg
+++ b/printer.cfg
@@ -24,10 +24,15 @@
 ## Includes
 [include klicky-probe.cfg]
 
+## Controllers
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_39003A001450535556323420-if00
 restart_method: command
 
+[mcu EBBCan]
+canbus_uuid: 24d5b90f781e
+
+## Printer config
 [printer]
 kinematics: corexy
 max_velocity: 300  
@@ -203,9 +208,12 @@ stealthchop_threshold: 0
 ##  Heater - HE0
 ##  Thermistor - T0
 [extruder]
-step_pin: PE2
-dir_pin: PE3
-enable_pin: !PD4
+# step_pin: PE2 # Octopus
+# dir_pin: PE3 # Octopus
+# enable_pin: !PD4 # Octopus
+step_pin: EBBCan: PD0
+dir_pin: !EBBCan: PD1
+enable_pin: !EBBCan: PD2
 ##  Update value below when you perform extruder calibration
 ##  If you ask for 100mm of filament, but in reality it is 98mm:
 ##  rotation_distance = <previous_rotation_distance> * <actual_extrude_distance> / 100
@@ -220,11 +228,13 @@ microsteps: 32
 full_steps_per_rotation: 200    #200 for 1.8 degree, 400 for 0.9 degree
 nozzle_diameter: 0.400
 filament_diameter: 1.75
-heater_pin: PA2
+# heater_pin: PA2 # Octopus
+heater_pin: EBBCan: PB13
 ## Check what thermistor type you have. See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types.
 ## Use "Generic 3950" for NTC 100k 3950 thermistors
 sensor_type: PT1000
-sensor_pin: PF4
+# sensor_pin: PF4 # Octopus
+sensor_pin: EBBCan: PA3
 min_temp: 10
 max_temp: 350
 max_power: 1.0
@@ -241,7 +251,8 @@ pid_kd = 131.721
 ##  E0 on MOTOR6
 ##  Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 extruder]
-uart_pin: PE1
+# uart_pin: PE1 # Octopus
+uart_pin: EBBCan: PA15
 interpolate: false
 run_current: 0.5
 sense_resistor: 0.110
@@ -286,7 +297,7 @@ pid_kd: 363.769
 ## For the PROBE port. Will not work with Diode. May need pull-up resistor from signal to 24V.
 #pin: ~!PB7
 ## For the DIAG_7 port. NEEDS BAT85 DIODE! Change to !PG15 if probe is NO.
-pin: PG15
+pin: ^ EBBCan: PB9
 ## For Octopus Pro PROBE port; NPN and PNP proximity switch types can be set by jumper
 #pin: ~!PC5
 
@@ -308,7 +319,8 @@ samples_tolerance_retries: 3
 
 ##  Print Cooling Fan - FAN0
 [fan]
-pin: PA8
+# pin: PA8 # Octopus
+pin: EBBCan: PA0
 kick_start_time: 0.5
 ##  Depending on your fan, you may need to increase this value
 ##  if your fan will not start. Can change cycle_time (increase)
@@ -318,7 +330,8 @@ off_below: 0.10
 
 ##  Hotend Fan - FAN1
 [heater_fan hotend_fan]
-pin: PE5
+# pin: PE5 # Octopus
+pin: EBBCan: PA1
 max_power: 1.0
 kick_start_time: 0.5
 heater: extruder
@@ -341,6 +354,17 @@ kick_start_time: 5.0
 heater: heater_bed
 heater_temp: 60
 fan_speed: 1.0
+
+#####################################################################
+#   Accelerometer
+#####################################################################
+
+[adxl345]
+cs_pin: EBBCan: PB12
+spi_software_sclk_pin: EBBCan: PB10
+spi_software_mosi_pin: EBBCan: PB11
+spi_software_miso_pin: EBBCan: PB2
+axes_map: x,y,z
 
 #####################################################################
 #   LED Control
