--- a/printer.cfg
+++ b/printer.cfg
@@ -212,7 +212,7 @@ stealthchop_threshold: 0
 # dir_pin: PE3 # Octopus
 # enable_pin: !PD4 # Octopus
 step_pin: EBBCan: PD0
-dir_pin: !EBBCan: PD1
+dir_pin: EBBCan: PD1
 enable_pin: !EBBCan: PD2
 ##  Update value below when you perform extruder calibration
 ##  If you ask for 100mm of filament, but in reality it is 98mm:
