--- a/printer.cfg
+++ b/printer.cfg
@@ -126,7 +126,7 @@ endstop_pin: PG10
 ##  (+) value = endstop above Z0, (-) value = endstop below
 ##  Increasing position_endstop brings nozzle closer to the bed
 ##  After you run Z_ENDSTOP_CALIBRATE, position_endstop will be stored at the very end of your config
-position_endstop: -0.5
+#position_endstop: -0.5
 ##--------------------------------------------------------------------
 
 position_max: 310
@@ -239,10 +239,10 @@ min_temp: 10
 max_temp: 350
 max_power: 1.0
 min_extrude_temp: 170
-control = pid
-pid_kp = 26.213
-pid_ki = 1.304
-pid_kd = 131.721
+#control = pid
+#pid_kp = 26.213
+#pid_ki = 1.304
+#pid_kd = 131.721
 ##  Try to keep pressure_advance below 1.0
 #pressure_advance: 0.05
 ##  Default is 0.040, leave stock
@@ -278,10 +278,10 @@ sensor_pin: PF3
 max_power: 1
 min_temp: 0
 max_temp: 120
-control: pid
-pid_kp: 58.437
-pid_ki: 2.347
-pid_kd: 363.769
+#control: pid
+#pid_kp: 58.437
+#pid_ki: 2.347
+#pid_kd: 363.769
 
 #####################################################################
 #   Probe
@@ -549,3 +549,20 @@ gcode:
     BED_MESH_CLEAR
     RESTORE_GCODE_STATE NAME=STATE_PRINT_END
 
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [extruder]
+#*# control = pid
+#*# pid_kp = 22.803
+#*# pid_ki = 2.027
+#*# pid_kd = 64.135
+#*#
+#*# [stepper_z]
+#*# position_endstop = 0.630
+#*#
+#*# [heater_bed]
+#*# control = pid
+#*# pid_kp = 62.598
+#*# pid_ki = 4.347
+#*# pid_kd = 225.355
