--- a/printer.cfg
+++ b/printer.cfg
@@ -332,23 +332,35 @@ off_below: 0.10
 [heater_fan hotend_fan]
 # pin: PE5 # Octopus
 pin: EBBCan: PA0
-max_power: 1.0
+max_power: 0.9
 kick_start_time: 0.5
 heater: extruder
 heater_temp: 50.0
 ##  If you are experiencing back flow, you can reduce fan_speed
-#fan_speed: 1.0
+fan_speed: 0.8
+shutdown_speed: 0.0
 
 ##  Controller fan - FAN2
 [controller_fan controller_fan]
 pin: PD12
 kick_start_time: 0.5
+max_power: 0.5
 heater: heater_bed
+shutdown_speed: 0.0
+
+##  Nevermore
+[heater_fan nevermore]
+pin: PE5 # Octopus
+kick_start_time: 0.5
+max_power: 1.0
+heater: heater_bed
+shutdown_speed: 0.0
+heater_temp: 60
 
 ##  Exhaust fan - FAN3
 [heater_fan exhaust_fan]
 pin: PD13
-max_power: 1.0
+max_power: 0.5
 shutdown_speed: 0.0
 kick_start_time: 5.0
 heater: heater_bed
