--- a/klicky-probe.cfg
+++ b/klicky-probe.cfg
@@ -8,3 +8,15 @@
 #[include ./klicky-screws-tilt-calculate.cfg]   #help adjust bed screws automatically
 [include ./klicky-quad-gantry-level.cfg]        #level 4 Z motors
 #[include ./klicky-z-tilt-adjust.cfg]           #level 2 or 3 Z motors
+
+[probe]
+pin: ^ EBBCan: PB9
+x_offset: 0
+y_offset: 25.0
+z_offset: 0
+speed: 10.0
+samples: 3
+samples_result: median
+sample_retract_dist: 3.0
+samples_tolerance: 0.006
+samples_tolerance_retries: 3
