--- a/printer.cfg
+++ b/printer.cfg
@@ -21,6 +21,10 @@
 ## Probe pin                            [probe] section
 ## Fine tune E steps                    [extruder] section
 
+#####################################################################
+#   Printer configuration settings
+#####################################################################
+
 ## Includes
 [include klicky-probe.cfg]
 
