Quiet down the chassis fan

--- a/printer.cfg
+++ b/printer.cfg
@@ -335,8 +335,10 @@ shutdown_speed: 0.0
 [controller_fan controller_fan]
 pin: PD12
 kick_start_time: 0.5
-max_power: 0.5
+max_power: 1.0
 heater: heater_bed
+fan_speed: 0.30
+cycle_time: 0.030
 shutdown_speed: 0.0
 
 ##  Nevermore
