WORKING - euclid probe

--- a/printer.cfg
+++ b/printer.cfg
@@ -5,21 +5,22 @@
 ## Core includes
 [include mcu.cfg]
 [include printer-config.cfg]
-[include macros.cfg]
-[include motion.cfg]
 [include bed.cfg]
 [include fan.cfg]
 
 ## Kinematics
+[include motion.cfg]
+[include macros.cfg]
 [include input-shaper.cfg]
+[include bed-mesh.cfg]
 
 ## Interface
 [include display.cfg]
 [include leds.cfg]
 
 ## Probes
-[include klicky/klicky-probe.cfg]
-# [include euclid-probe.cfg]
+# [include klicky/klicky-probe.cfg]
+[include euclid-probe.cfg]
 # [include probe.cfg]
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
