--- a/euclid-probe.cfg
+++ b/euclid-probe.cfg
@@ -72,27 +72,19 @@ lift_speed: 30
 [gcode_macro EuclidProbe]
 description: config vars for Euclid probe deploy/stow
 
-# variable_z_endstop_x:         230
-# variable_z_endstop_y:         350
 ## @TODO Replace the coordinates to suit your printer
-variable_position_preflight: [ 150, 350 ] # position for probe to have clear path to dock
-variable_position_side:      [  30, -4 ] # position for probe near dock to swipe on/off
-variable_position_dock:      [   0, -4 ] # dock position
+variable_position_preflight: [  31, 250 ] # position for probe to have clear path to dock
+variable_position_side:      [  31, 320 ] # position for probe near dock to swipe on/off
+variable_position_dock:      [  31, 350 ] # dock position
 ## @TODO if your printer has a fixed Z-Endstop that you will use define it here
 ## @TODO for example Voron Trident
 variable_position_zstop:      [ 230, 350 ] # zstop position
 
 ## exit/re-entry staging
-variable_position_exit:      [   0, 40 ] # exit position
+variable_position_exit:      [  80, 350 ] # exit position
 
 ## clearance between the toolhead and bed when traveling to pick up the probe
 variable_bed_clearance: 15
-
-## probe dock height
-## @TODO If the toolhead can move vertically in relation to the probe dock
-## @TODO height(such as attached to the be on a moving-gantry printer like a
-## @TODO Voron 2.4), set this to the Z position of the probe dock.
-variable_dock_height: 15
 
 ## move speeds in mm/min
 variable_move_speeds: 18000
@@ -210,10 +202,6 @@ gcode:
         #  move to the side of the dock
         G0 X{ euclid_probe.position_side[0] } Y{ euclid_probe.position_side[1] } F{ euclid_probe.move_speeds }
 
-        # @TODO fixed bed dock and moving gantry printers need to add a move
-        # @TODO command here to lower the gantry to dock height
-		# G0 Z {euclid_probe.dock_height} F500
-
         # wait 1/4 second
         M400
         G4 P250
@@ -247,10 +235,6 @@ gcode:
         # set approach elevation for fixed gantry system to clear probe over bed
         G0 Z{ euclid_probe.bed_clearance } F3000
 
-        # @TODO fixed bed dock and moving gantry printers need to add a move
-        # @TODO command here to lower the gantry to dock height
-		G0 Z{euclid_probe.dock_height} F500
-
         # move to the exit/re-entry staging position
         G0 X{ euclid_probe.position_exit[0] } Y{ euclid_probe.position_exit[1] } F{ euclid_probe.move_speeds }
 
@@ -274,8 +258,7 @@ gcode:
 ## For a more complex example that probes the area that will be printed, see
 ## https://github.com/blalor/vcore3-ratos-config/blob/50e757ec32e085bedb3b9fa317581f9aa1913dd2/euclid.cfg#L230-L305
 [gcode_macro BED_MESH_CALIBRATE]
-# @TODO: undo this
-# rename_existing: BED_MESH_CALIBRATE_ORIG
+rename_existing: BED_MESH_CALIBRATE_ORIG
 gcode:
     DEPLOY_PROBE
     BED_MESH_CALIBRATE_ORIG
