Enable a few more features

--- a/printer-config.cfg
+++ b/printer-config.cfg
@@ -25,3 +25,10 @@ enable_force_move: True
 #   #default_prefix: echo:
 #   #   Directly sets the default prefix. If present, this value will
 #   #   override the "default_type".
+
+[pause_resume]
+
+[display_status]
+
+[virtual_sdcard]
+path: ~/printer_data/gcodes
