Add Euclid menu options

--- a/printer.cfg
+++ b/printer.cfg
@@ -21,6 +21,7 @@
 ## Probes
 # [include klicky/klicky-probe.cfg]
 [include euclid-probe.cfg]
+[include euclid-probe-menu.cfg]
 [include autoz.cfg]
 # [include probe.cfg]
 
